--- a/Project.toml
+++ b/Project.toml
@@ -5,17 +5,14 @@ version = "1.0.0-DEV"
 
 [deps]
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
-Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
-Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 
 [compat]
 julia = "1"
 
 [extras]
-Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 
 [targets]
-test = ["Test", "Random", "Images", "DelimitedFiles"]
+test = ["Test", "Random", "DelimitedFiles"]
