--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "DifferentialPhaseContrast"
 uuid = "4f2186bb-3a2c-44f0-a062-04c6d4d3fd0d"
 authors = ["Ewout van der veer"]
-version = "1.0.0-DEV"
+version = "1.0.1"
 
 [deps]
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
